First working version of a standard filter in spatial domain. Fixed some issues in generating the doc. Now in the process of implementing a meanfilter class.

--- a/Project/CMakeLists.txt
+++ b/Project/CMakeLists.txt
@@ -3,10 +3,11 @@ project(Project)
 
 set(CMAKE_CXX_STANDARD 11)
 
-set(SOURCE_FILES Signal.cpp StandardFilter.cpp AudioFile.cpp main.cpp)
+set(SOURCE_FILES Signal.cpp AudioFile.cpp main.cpp  )
 add_executable(Project ${SOURCE_FILES})
 
 file(COPY "Doxyfile" DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/)
+file(COPY "atom_icon_192.ico" DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/)
 find_package(Doxygen)
 add_custom_target(doc
         ${DOXYGEN_EXECUTABLE} ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile
