Add the modification of the class signal, implementation of two new classes in order to generate a signal. The discrete Fourier transform is not working yet

--- a/Project/CMakeLists.txt
+++ b/Project/CMakeLists.txt
@@ -3,5 +3,5 @@ project(Project)
 
 set(CMAKE_CXX_STANDARD 11)
 
-set(SOURCE_FILES Signal.cpp AudioFile.cpp main.cpp)
+set(SOURCE_FILES Read.cpp Signal.cpp AudioFile.cpp test_main.cpp)
 add_executable(Project ${SOURCE_FILES})
