Add the different files that I modified

--- a/sounds_test/AudioFile/CMakeLists.txt
+++ b/sounds_test/AudioFile/CMakeLists.txt
@@ -1,8 +1,7 @@
 cmake_minimum_required(VERSION 3.8)
 project(advanced_cmake)
 
-set(CMAKE_CXX_STANDARD 14)
+set(CMAKE_CXX_STANDARD 11)
 
-add_executable(testAudioFile test_main.cpp AudioFile.cpp)
-
-
+set(SOURCE_FILES AudioFile.cpp test_main.cpp)
+add_executable(advanced_cmake ${SOURCE_FILES})
