Adding the possibility of writing a signal into a sound file. Also adding the test of this new feature.

--- a/Project/CMakeLists.txt
+++ b/Project/CMakeLists.txt
@@ -6,6 +6,7 @@ set(CMAKE_CXX_STANDARD 11)
 set(SOURCE_FILES Read.cpp Signal.cpp AudioFile.cpp main.cpp )
 add_executable(Project ${SOURCE_FILES})
 add_executable(TestFT Read.cpp Signal.cpp AudioFile.cpp TestFT.cpp)
+add_executable(TestSong Read.cpp Signal.cpp AudioFile.cpp TestSong.cpp)
 
 file(COPY "Doxyfile" DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/)
 file(COPY "atom_icon_192.ico" DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/)
