Added the Parser to the built

--- a/Project/CMakeLists.txt
+++ b/Project/CMakeLists.txt
@@ -3,7 +3,7 @@ project(Project)
 
 set(CMAKE_CXX_STANDARD 11)
 
-set(SOURCE_FILES Read.cpp Signal.cpp AudioFile.cpp main.cpp )
+set(SOURCE_FILES Read.cpp Signal.cpp AudioFile.cpp main.cpp ConfigFileParser.cpp ConfigFileParser.h)
 add_executable(Project ${SOURCE_FILES})
 add_executable(TestFT Read.cpp Signal.cpp AudioFile.cpp TestFT.cpp)
 add_executable(TestSong Read.cpp Signal.cpp AudioFile.cpp TestSong.cpp)
