Prepared the CMakeLists.txt for a standard cmake built and for proper testing

--- a/Project/CMakeLists.txt
+++ b/Project/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.8)
 project(Project)
 
 set(CMAKE_CXX_STANDARD 11)
-
+set(DOC_FOLDER ${CMAKE_CURRENT_SOURCE_DIR}/doc)
 set(SOURCE_FILES Read.cpp Signal.cpp AudioFile.cpp main.cpp ConfigFileParser.cpp ConfigFileExecuter.cpp MedianFilter.cpp)
 #Supprimer le MedianFilter.cpp
 #set(SOURCE_FILES Read.cpp Signal.cpp AudioFile.cpp main.cpp ConfigFileParser.cpp ConfigFileParser.h ConfigFileExecuter.cpp ConfigFileExecuter.h)
@@ -13,9 +13,15 @@ add_executable(TestSong Read.cpp Signal.cpp AudioFile.cpp TestSong.cpp)
 
 file(COPY "Doxyfile" DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/)
 file(COPY "atom_icon_192.ico" DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/)
+file(COPY "test-audio"        DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+file(MAKE_DIRECTORY ${DOC_FOLDER})
 find_package(Doxygen)
 add_custom_target(doc
         ${DOXYGEN_EXECUTABLE} ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile
-        WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
+        WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
         COMMENT "Generating API documentation with Doxygen" VERBATIM
         )
+file(COPY ${DOC_FOLDER}      DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+
+
+
