--- a/Project/CMakeLists.txt
+++ b/Project/CMakeLists.txt
@@ -10,8 +10,9 @@ add_executable(TestFT Read.cpp Signal.cpp AudioFile.cpp TestFT.cpp)
 add_executable(TestErrorFT Read.cpp Signal.cpp AudioFile.cpp TestErrorFT.cpp)
 add_executable(TestSong Read.cpp Signal.cpp AudioFile.cpp TestSong.cpp)
 add_executable(TestFrequencyFile Read.cpp Signal.cpp AudioFile.cpp TestReadFrequencyFile.cpp ConfigFileParser.cpp ConfigFileExecuter.cpp MedianFilter.cpp)
-add_executable(TestFourierFilters Read.cpp Signal.cpp AudioFile.cpp FrequencyFilter.cpp BandPassFrequencyFilter LowPassFrequencyFilter HighPassFrequencyFilter.cpp TestFourierFilters.cpp)
-
+add_executable(TestFourierFilters Read.cpp Signal.cpp AudioFile.cpp FrequencyFilter.cpp BandPassFrequencyFilter.cpp LowPassFrequencyFilter.cpp HighPassFrequencyFilter.cpp TestFourierFilters.cpp)
+add_executable(TestErrorHistogram Read.cpp Signal.cpp AudioFile.cpp TestErrorHistogram.cpp)
+add_executable(TestHistogram Read.cpp Signal.cpp AudioFile.cpp TestHistogram.cpp)
 
 #Copies files for Doxygen and test running
 file(COPY "run_filter_tests.sh" DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/)
